# lez-programs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/deploy-program/: skill.md
.claude/skills/program-id/: skill.md
.github/workflows/: ci.yml
amm/: Cargo.toml  amm-idl.json
amm/core/: Cargo.toml
amm/core/src/: lib.rs
amm/methods/guest/: Cargo.toml
amm/src/: add.rs  lib.rs  new_definition.rs  recover.rs  remove.rs  swap.rs  sync.rs  tests.rs  vault_utils.rs
ata/: Cargo.toml
ata/core/: Cargo.toml
ata/methods/guest/: Cargo.toml
ata/src/: tests.rs
integration_tests/: Cargo.toml
integration_tests/tests/: amm.rs  ata.rs  token.rs
token/: Cargo.toml
token/core/: Cargo.toml
token/methods/guest/: Cargo.toml
